(fix) fixed grid overflow problems and logic
Added a menu for selecting rainbow, black, or restarting the grid
Fixed problems wit flexbox not stacking correctly
TODO: fix the grid still giving problems by not shrinking

--- a/style.css
+++ b/style.css
@@ -1,16 +1,60 @@
-* {
-    border: red solid 1px;
+
+
+body {
+    background: 
+      linear-gradient(145deg,#757575 10%,#ffffff 10.5% 19%,#0000 19.5% 80.5%,#ffffff 81% 89.5%,#bdbdbd 90%), 
+      linear-gradient(145deg,#757575 10%,#ffffff 10.5% 19%,#0000 19.5% 80.5%,#ffffff 81% 89.5%,#bdbdbd 90%) calc(17px) 34px,
+      linear-gradient(35deg,#757575 10%,#ffffff 10.5% 19%,#0000 19.5% 80.5%,#ffffff 81% 89.5%,#bdbdbd 90%), 
+      linear-gradient( 35deg,#757575 10%,#ffffff 10.5% 19%,#0000 19.5% 80.5%,#ffffff 81% 89.5%,#bdbdbd 90%) calc(17px) 34px,
+      conic-gradient(from -90deg at 37.5% 50%,#0000 75%,#757575 0) calc(17px/4) 0,
+      conic-gradient(from -90deg at 37.5% 50%,#0000 75%,#bdbdbd 0) calc(17px) 0,
+      linear-gradient(90deg,#bdbdbd 38%,#757575 0 50%,#bdbdbd 0 62%,#757575 0);
+    background-size: 34px calc(2*34px/3);
+    padding: 0 10vh;
+    margin: -0.1% 0 0 -0.1%;
 }
 
 .container {
+    border: 1px black solid;
+}
+
+.container, .grid {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-content: center;
+    align-items: center;
+    background: white;
+}
+
+.container ul {
+    text-decoration: none;
+    list-style: none;
+    padding: 0;
+    text-align: center;
+    margin: 1vw;
+}
+
+.container ul button {
+    margin: 10vh 0;
+    width: 100%;
+    color: black;
+    background-color: radial-gradient(circle, rgba(207,207,207,1) 0%, rgba(231,231,231,1) 46%, rgba(255,255,255,1) 100%);
+    border-radius: 10px;
+}
+
+.grid {
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 0;
+    min-height: 0;
+    height: 100vh;
+    width: 100vw;
+    aspect-ratio: 1/1;
+    border-left: 1px dashed black;
 }
 
 .tile {
     border: black 1px solid;
-    width: 15em;
-    height: 15em;
+    box-sizing: border-box;
+    aspect-ratio: 1/1;
 }
